# Advocators

./: README.md  pyproject.toml
Advocators/: manage.py
Advocators/Advocators/: asgi.py  settings.py  urls.py  wsgi.py
Advocators/advocates/: admin.py  models.py  serializers.py  urls.py  views.py
Advocators/advocates/migrations/: 0001_initial.py  0002_advocates_links.py  0002_alter_advocates_profile_pic_and_more.py  0003_advocates_company_alter_advocates_advocate_years_exp_and_more.py  0003_alter_advocates_profile_pic.py  0004_alter_advocates_company.py  0005_alter_advocates_company_alter_advocates_links.py  0006_alter_advocates_company_alter_advocates_links.py
Advocators/companies/: admin.py  models.py  serializers.py  urls.py  views.py
Advocators/companies/migrations/: 0001_initial.py
